--- a/src/components/Navi/style.scss
+++ b/src/components/Navi/style.scss
@@ -2,7 +2,7 @@
 .col {
     padding-top: 20px;
     padding-bottom: 20px;
-    font-weight:700;
+    font-size: 22px;
 }
 
 .nav-style {
@@ -27,13 +27,13 @@
 // }
 
 
-// @media all and (max-width: 600px) {
+@media all and (max-width: 600px) {
   
-//     .container {
-//       flex-wrap: wrap;
-//     }
+    .container {
+      flex-wrap: wrap;
+    }
     
-//     .container > li {
-//       flex-basis: 50%;
-//     }
-//   }
+    .container > li {
+      flex-basis: 50%;
+    }
+  }
