landing page media query for padding

--- a/src/components/Navi/style.scss
+++ b/src/components/Navi/style.scss
@@ -53,16 +53,14 @@
     .col { 
         padding-top: 1px;
         padding-bottom: 1px;
-        font-size: 12px;
-
-        // float: none;
-        min-width: 100%;
+        font-size: 16px;
+        // min-width: 100%;
     }
 
     .col-logo {
         padding-top: 1px;
         padding-bottom: 1px;
-        font-size: 12px;
+        font-size: 16px;
 
         float: none;
     }
