--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -1,8 +1,14 @@
 .top-it {
-    padding-top:90px;
+    padding-top:110px;
 }
 
 .tall-div {
     height: 200px;
     // background-color: blue;
+}
+
+@media (max-width: 600px) {
+    .top-it {
+        padding-top:50px;
+    }
 }
