--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -2,6 +2,14 @@
     padding-top:110px;
 }
 
+.body-fit {
+    border-style: solid;
+    border-radius: 3px;
+    border-color: black;
+    border-width: 5px;
+    background-color: white;
+}
+
 .tall-div {
     height: 200px;
     // background-color: blue;
