--- a/src/components/Navi/style.scss
+++ b/src/components/Navi/style.scss
@@ -3,7 +3,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: 22px;
-    // color: white;
+    color: black;
 }
 
 .col-logo {
@@ -14,7 +14,8 @@
 
     padding-top: 20px;
     padding-bottom: 20px;
-    font-size: 22px;
+    font-size: 24px;
+    color: black;
 }
 
 .nav-style {
