--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -69,6 +69,12 @@ body {
   width: 100%;
 }
 
+// TEMP
+body {
+  // position: relative;
+  // margin: 0 0 100px; /* bottom = footer height */
+}
+
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
