--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -1,5 +1,7 @@
 .top-it {
     padding-top:110px;
+    // for spacing after last line of Landing Page text or content
+    padding-bottom: 50px;
 }
 
 .body-fit {
@@ -8,15 +10,22 @@
     border-color: black;
     border-width: 5px;
     background-color: white;
+
+    overflow: hidden;
+
 }
 
 .tall-div {
     height: 200px;
-    // background-color: blue;
 }
 
 @media (max-width: 600px) {
     .top-it {
         padding-top:50px;
+    }
+
+    .top-it {
+        // so can see last line of text on Landing Page if its long
+        padding-bottom: 300px;
     }
 }
