--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -14,7 +14,7 @@
 
 
 .bottom-footer {
-  position: relative; // fixed, absolute doesn't work well...
+  position: relative; // fixed, absolute doesn't work well... relative
   bottom: 0;
   width: 100%;
   // so overlaps with body
