--- a/src/components/Navi/style.scss
+++ b/src/components/Navi/style.scss
@@ -1,3 +1,8 @@
+.fixed-top {
+    position: relative !important;
+}
+
+
 // makes navbar taller and keeps its nav links centered vertically
 .col {
     padding-top: 20px;
