--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -2,6 +2,8 @@
     padding-top:110px;
     min-height: 100%;
     padding-bottom: 30px;
+
+    // margin-top: -5px;
 }
 
 .body-fit {
@@ -15,7 +17,10 @@
 
     min-height: 100%;
 
-    // margin-bottom: 11px;
+    margin-bottom: -5px;
+    padding-bottom: 2px;
+
+    // margin-top: -4px;
 
 }
 
