--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -17,8 +17,10 @@
 
     min-height: 100%;
 
-    margin-bottom: -5px;
-    padding-bottom: 2px;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    // margin-bottom: -5px;
+    // padding-bottom: 2px;
 
     // margin-top: -4px;
 
