--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -1,10 +1,7 @@
 @import 'scss/colors.scss';
 
-.wc-footer {
-  display: flex;
-  align-items: center;
+.footer-style {
   cursor: pointer;
-
   border-style: solid;
   border-radius: 3px;
   border-color: black;
@@ -13,12 +10,22 @@
 }
 
 
-.bottom-footer {
-  position: relative; // fixed, absolute doesn't work well... relative
-  bottom: 0;
-  width: 100%;
-  // so overlaps with body
-  // margin-top: -5px;
+.footer-bottom {
+  // display: flex;
+  // align-items: center;
+  // position: relative; // fixed, absolute doesn't work well... relative
+  // bottom: 0;
+  // width: 100%;
+
+
+
+  // ?
+  // min-height: 7vh;
+}
+
+.footer-div {
+  position: relative;
+  top: 1em;
 }
 
 .wc-footer-text {
