--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -1,29 +1,28 @@
-.top-it {
+.padding-top-and-bottom {
     padding-top:110px;
     min-height: 100%;
-    padding-bottom: 30px;
+    // GOOD
+    // padding-bottom: 30px;
+    // BETTER
+    // padding-bottom: 105px;
 
-    // margin-top: -5px;
+    // flex: 1;
 }
 
-.body-fit {
+.body-container-parent {
     border-style: solid;
     border-radius: 3px;
     border-color: black;
     border-width: 5px;
     background-color: white;
-
     overflow: hidden;
-
     min-height: 100%;
-
     margin-top: 1px;
     margin-bottom: 1px;
-    // margin-bottom: -5px;
-    // padding-bottom: 2px;
 
-    // margin-top: -4px;
-
+    min-height: 86vh;
+    // display: flex;
+    // flex-direction: column;
 }
 
 .tall-div {
