--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -70,17 +70,11 @@ body {
 }
 
 // ?
-.blah {
-  overflow: auto;
-  min-height: 100%;
-  position: relative;
-}
-
-// TEMP
-body {
-  // position: relative;
-  // margin: 0 0 100px; /* bottom = footer height */
-}
+// .blah {
+//   overflow: auto;
+//   min-height: 100%;
+//   position: relative;
+// }
 
 * {
   -webkit-font-smoothing: antialiased;
