--- a/src/components/LandingPage/style.scss
+++ b/src/components/LandingPage/style.scss
@@ -1,12 +1,6 @@
 .padding-top-and-bottom {
     padding-top:110px;
     min-height: 100%;
-    // GOOD
-    // padding-bottom: 30px;
-    // BETTER
-    // padding-bottom: 105px;
-
-    // flex: 1;
 }
 
 .body-container-parent {
@@ -20,9 +14,7 @@
     margin-top: 1px;
     margin-bottom: 1px;
 
-    min-height: 86vh;
-    // display: flex;
-    // flex-direction: column;
+    min-height: 84vh;
 }
 
 .tall-div {
@@ -32,5 +24,9 @@
 @media (max-width: 600px) {
     .top-it {
         padding-top:50px;
+    }
+
+    .body-container-parent {
+        min-height: 92vh;
     }
 }
