--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -99,3 +99,18 @@ img:hover {
 .black {
   color: black;
 }
+
+// template-gatstrap
+.body-container-parent {
+  border-style: solid;
+  border-radius: 3px;
+  border-color: black;
+  border-width: 5px;
+  background-color: white;
+  overflow: hidden;
+  min-height: 100%;
+  margin-top: 1px;
+  margin-bottom: 1px;
+
+  min-height: 84vh;
+}
