--- a/src/templates/Page/style.scss
+++ b/src/templates/Page/style.scss
@@ -68,3 +68,17 @@ section {
     }
   }
 }
+
+
+
+
+// Page 1,2,3,4
+.paragraph {
+  text-align: left;
+  color: black;
+  // word-break: break-all;
+}
+// Image on Page 1,2,3,4
+.rounded {
+  border-radius: 5px;
+}
